--- a/.github/workflows/namcap.yml
+++ b/.github/workflows/namcap.yml
@@ -18,10 +18,6 @@ jobs:
           mv /etc/pacman.d/mirrorlist /etc/pacman.d/mirrorlist.bak
           echo "Server = http://ca.us.mirror.archlinuxarm.org/aarch64/\$repo" | tee "/etc/pacman.d/mirrorlist"
           pacman -Syyu git namcap libarchive --noconfirm --needed
-          pacman-key --init
-          pacman-key --populate archlinuxarm
-          pacman-key --recv-key 6290731A5B773E16 --keyserver keyserver.ubuntu.com
-          pacman-key --lsign-key 6290731A5B773E16
 
       - name: Checkout
         uses: actions/checkout@v4
@@ -34,6 +30,7 @@ jobs:
             echo -e "\033[1;34m=====================================\033[0m"
             if [[ "$pkg" == *adaptation-hybris* ]]; then
               echo -e "\033[1;33mSkipping package (adaptation-hybris match):\033[0m $pkg"
+              echo -e "\033[1;34m=====================================\033[0m"
               continue
             fi
             echo -e "\033[1;32mInstalling:\033[0m $pkg"
